# gitfc

./: Makefile  README.md  fc_queue.py  main.py  pyproject.toml
demo/: generate.sh  hero.tape  queue-simple.tape  queue.tape
future_commit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gitfc/: cli.py  daemon.py  dates.py  git.py  help.py  queue.py
tests/: conftest.py  test_queue.py
