[project]
name = "future-commit"
version = "1.0.0"
description = "Git commit with a custom date"
requires-python = ">=3.8"

[project.scripts]
gitfc = "gitfc.cli:main"

[tool.setuptools]
packages = ["gitfc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
